@@ -126,12 +126,14 @@ def findtutorials():
     texthead = '<font size=+1><b>Text File Documentation</b></font><br>'
     tuthead = '<font size=+1><b>Tutorials</b></font><br>'
     texts1 = glob.glob('../*.txt')
+    texts1.sort()
     texts2 = [os.path.split(x)[1] for x in texts1]
     texts3 = [os.path.splitext(x)[0] for x in texts2]
     texts4 = [open(x).readline() for x in texts1]
     texts = [fileline%x for x in zip(texts2, texts3, texts4)]
     finaltext = texthead + '\n'.join(texts)
-    tuts1 =  glob.glob('../tut/*.html')   
+    tuts1 =  glob.glob('../tut/*.html')
+    tuts1.sort()
     tuts2 = ['tut/' + os.path.split(x)[1] for x in tuts1]
     tuts3 = [os.path.splitext(x)[0] for x in tuts2]
     tuts4 = [open(x).readlines(2)[1] for x in tuts1]
